hphp/test/slow/object_property/701.php.expectf

Warning: Cannot access property on non-object in %s/test/slow/object_property/701.php on line 4
NULL

Warning: Cannot access property on non-object in %s/test/slow/object_property/701.php on line 4
NULL

Warning: Cannot access property on non-object in %s/test/slow/object_property/701.php on line 4
NULL

Warning: Cannot access property on non-object in %s/test/slow/object_property/701.php on line 4
NULL

Fatal error: Cannot access empty property in %s/test/slow/object_property/701.php on line 4
